--- a/DISM_b/DISM_b.csproj
+++ b/DISM_b/DISM_b.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>DISM____</RootNamespace>
+    <RootNamespace>DISM_b</RootNamespace>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <ApplicationIcon>bduck_floppy_Vx9_icon.ico</ApplicationIcon>
